# VLC_Compressor

./: CMakeLists.txt  README.md
.github/workflows/: Windows Build.yml
resource/: VLCComp_editor.uidesc  au-info.plist  win32resource.rc
source/: VLCComp_cids.h  VLCComp_controller.cpp  VLCComp_controller.h  VLCComp_entry.cpp  VLCComp_processor.cpp  VLCComp_processor.h  VLCComp_shared.h  version.h
